# noycer

./: .gitignore  .gitmodules  Makefile  README.md
dgui/: CMakeLists.txt
include/glad/: gl.h
shaders/: basic.frag  basic.vert  screen.frag  screen.vert  sprite.frag  sprite.vert
src/: dgui.c  iperlin.c  iperlin.h  main.c
src/base/: base.h  mem.c  mem.h  util.c  util.h
src/dgui/: dgui.c  dgui.h
src/experiments/: iperlin_control.c  iperlin_control.h
src/experiments/iperlin/: iperlin_control.c  iperlin_control.h
src/video/: camera.h  framebuffer.c  framebuffer.h  model.c  model.h  renderable.c  renderable.h  shader.c  shader.h  textures.h
